<resources>
    <string name="app_name">Naunehal Line Listing</string>
    <string name="hl01"> ڈسٹرکٹ </string>
    <string name="hl02"> یوسی  کا نام </string>
    <string name="hl03"> کلسٹر نمبر </string>

    <string name="hl04">  علاقہ[گائوں/گوٹھ/موضع/ٹائون/گلی/بلاک/لین]: </string>
    <string name="hl05"> اسٹرکچر نمبر </string>
    <string name="hl06"> گھرانہ نمبر </string>
    <string name="hl07"> اسٹرکچر کی قسم </string>
    <string name="hl07a"> رہائشی </string>
    <string name="hl07b"> دکان/مارکیٹ/پلازہ </string>
    <string name="hl07c"> مسجد/گرجاگھر/مندر </string>
    <string name="hl07d"> اسکول/کالج/یونیورسٹی </string>
    <string name="hl07e"> مرکز صحت </string>
    <string name="hl07f"> خالی/بند/زیرتعمیر </string>
    <string name="hl07g"> مزید عمارت نہیں </string>
    <string name="hl0796"> دیگر (وضاحت کریں) </string>
    <string name="hl08"> کیا یہ جگہ رہائشی مقاصد کے لئے استعمال کی جا رہی ہے؟ </string>
    <string name="hl09"> کیا اس اسٹرکچر میں ایک سے زیا دہ گھرانے ہیں </string>
    <string name="hl10"> اگر ہاں، تو سوال نمبر 7 سے گھرانے کا سیریل نمبر لکھیں </string>
    <string name="hl11"> گھرانے کے سربراہ کا نام </string>
    <string name="hl12"> گھرانے کے افراد کی تعداد </string>
    <string name="hl13"> تین (0-3) سال سے کم عمر بچوں کی تعداد </string>
    <string name="hl14"> پانچ (3-5) سال سے کم عمر بچوں کی تعداد </string>
    <string name="hl15"> کیا اس گھر میں مذید کوئی خاندان رہائش پزیر ہے </string>

    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="count"> تعداد </string>

    <string name="txtMsg">1234567890-=+ qwertyuiop[]asdfghjkl;zxcvbnm,.QWERTYUIOP{}ASDFGHJKL:ZXCVBNM?</string>
    <string name="child_name">بچے کا نام</string>
    <string name="child_age">بچے کی عمر</string>
    <string name="hl12m">ماہ</string>
    <string name="hl12d">دن</string>
    <string name="btnDownload">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="delete">Delete this household</string>
    <string name="main_activity">Main Menu</string>
</resources>
