<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="listing"
            type="edu.aku.hassannaqvi.naunehal_listing.models.Listings" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="#ffff" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_bg_gray"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/hl06"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/hhno"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/red_overlay"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@{listing.hl03+`-`+listing.hl05+`-`+listing.hl06}"
                            android:textColor="@color/white"
                            android:textSize="40sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/deleteHH"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:checked="@{listing.hlDelete.equals(`1`)}"
                            android:onClick="@{()->listing.setHlDelete(listing.hlDelete.equals(`1`)?``:`1`)}"
                            android:padding="0dp"
                            android:text="@string/delete"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="@{Integer.valueOf(listing.hl06) > 1?View.VISIBLE:View.GONE }" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@{listing.hl10}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="@{listing.hlDelete.equals(`1`) ? View.GONE : View.VISIBLE}">


                        <androidx.cardview.widget.CardView
                            style="@style/cardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hl11" />

                                <EditText
                                    android:id="@+id/hl11"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:background="@drawable/border_1px_gray"
                                    android:digits="qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM"
                                    android:inputType="textPersonName"
                                    android:text="@={listing.hl11}" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            style="@style/cardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hl12" />

                                <EditText
                                    android:id="@+id/hl12"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:background="@drawable/border_1px_gray"
                                    android:inputType="number"
                                    android:text="@={listing.hl12}" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hl13" />

                                <RadioGroup
                                    android:id="@+id/hl13"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:background="@drawable/border_1px_gray"
                                    android:orientation="horizontal">

                                    <RadioButton

                                        android:id="@+id/hl1301"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:checked="@{listing.hl13.equals(`1`)}"
                                        android:onClick="@{()->listing.setHl13(`1`)}"
                                        android:text="@string/yes" />

                                    <androidx.appcompat.widget.AppCompatRadioButton
                                        android:id="@+id/hl1302"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:checked="@{listing.hl13.equals(`2`)}"
                                        android:onClick="@{()->listing.setHl13(`2`)}"
                                        android:text="@string/no" />

                                    <EditText
                                        android:id="@+id/hl13x"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:inputType="number"
                                        android:text="@={listing.hl13x}"
                                        android:visibility="@{listing.hl13.equals(`1`)? View.VISIBLE: View.INVISIBLE}" />
                                </RadioGroup>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>


                        <androidx.cardview.widget.CardView
                            style="@style/cardView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hl14" />

                                <RadioGroup
                                    android:id="@+id/hl14"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:background="@drawable/border_1px_gray"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/hl1401"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:checked="@{listing.hl14.equals(`1`)}"
                                        android:onClick="@{()->listing.setHl14(`1`)}"
                                        android:text="@string/yes" />

                                    <androidx.appcompat.widget.AppCompatRadioButton
                                        android:id="@+id/hl1402"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:checked="@{listing.hl14.equals(`2`)}"
                                        android:onClick="@{()->listing.setHl14(`2`)}"
                                        android:text="@string/no" />

                                    <EditText
                                        android:id="@+id/hl14x"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:inputType="number"
                                        android:text="@={listing.hl14x}"
                                        android:visibility="@{listing.hl14.equals(`1`)? View.VISIBLE: View.INVISIBLE}" />
                                </RadioGroup>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hl15"
                            android:textColor="#00000000" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="@{ Integer.valueOf(listing.hl06) >= Integer.valueOf(listing.hl09x)?View.VISIBLE:View.GONE}">

                            <Switch
                                android:id="@+id/hh17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:onCheckedChanged="@{(switch, checked) -> listing.setHl15(checked?`1`:``)}"
                                android:padding="8dp"
                                android:text="@string/hl15"
                                android:textColor="@color/red_overlay"
                                android:textOff="@string/no"
                                android:textOn="@string/yes"
                                android:textStyle="bold" />


                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/btnAddFamily"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/action_button"
                        android:minHeight="36dp"
                        android:onClick="ContinueListing"
                        android:text="Add A Family"
                        android:textColor="@color/white"
                        android:visibility="@{listing.hl15.equals(`1`)|| Integer.valueOf(listing.hl06) &lt; Integer.valueOf(listing.hl09x)  ?View.VISIBLE: View.GONE}" />

                    <Button
                        android:id="@+id/btnAddStructure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/action_button"
                        android:minHeight="36dp"
                        android:onClick="ContinueListing"
                        android:text="Goto Next Structure"
                        android:textColor="@color/white"
                        android:visibility="@{ Integer.valueOf(listing.hl06) &lt; Integer.valueOf(listing.hl09x)|| listing.hl15.equals(`1`)? View.GONE:View.VISIBLE}" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>